# blake512-hash

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: lib.rs
tests/: vectors.rs
